@@ -1,7 +1,7 @@
 #!/bin/sh
 ################################################################################
 #      This file is part of LibreELEC - https://libreelec.tv
-#      Copyright (C) 2016 Team LibreELEC
+#      Copyright (C) 2016-present Team LibreELEC
 #
 #  LibreELEC is free software: you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -31,41 +31,10 @@ wgp_user () {
   fi
 }
 
-mkdir -p "$ADDON_HOME"
+webgrabplus.init
+
 cd "$ADDON_HOME"
 
-for p in chans2correct.xml mdb rex siteini.pack WebGrab++.config.xml
-do
-  if [ ! -e "$p" ]
-  then
-    cp -r "$ADDON_DIR/config/$p" .
-  fi
-done
-
-sid="$(basename $(find $ADDON_DIR/config/siteini.pack -name SiteIni.Pack_*.txt))"
-sih="$(basename $(find siteini.pack -name SiteIni.Pack_*.txt))"
-if [ "$sid" \> "$sih" ]
-then
-  rm -rf siteini.pack
-  cp -r "$ADDON_DIR/config/siteini.pack" .
-fi
-
 wgp_user "pre-processing" "$ADDON_HOME/before.sh"
-
-mono $ADDON_DIR/WebGrab+Plus/WebGrab+Plus.exe
-
-if [ -f guide_mdb.xml ]
-then
-  cp guide_mdb.xml guide_wgp.xml
-  rm guide_mdb.xml
-fi
-
-cp guide_wgp.xml guide_xtc.xml
-mono $ADDON_DIR/WebGrab+Plus/xmltv_time_correct.exe guide_wgp.xml guide_xtc.xml < /dev/zero
-
-cp guide_xtc.xml guide.xml
-rm guide_xtc.xml
-
-mono $ADDON_DIR/WebGrab+Plus/WG2MP.exe guide.xml mediaportal.xml
-
+mono "$ADDON_DIR/bin/WebGrab+Plus.exe" "$PWD"
 wgp_user "post-processing" "$ADDON_HOME/after.sh"
