@@ -1,7 +1,7 @@
 #!/bin/sh
 ################################################################################
 #      This file is part of LibreELEC - https://libreelec.tv
-#      Copyright (C) 2016 Team LibreELEC
+#      Copyright (C) 2016-present Team LibreELEC
 #
 #  LibreELEC is free software: you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -20,6 +20,9 @@
 . /etc/profile
 oe_setup_addon service.webgrabplus
 
+webgrabplus.init
+
 [ "$wgp_on_act" ] && on_act="--on-active=$wgp_on_act"
 
-systemd-run $on_act --on-calendar="$wgp_on_cal" --unit=webgrabplus /bin/sh $ADDON_DIR/bin/webgrabplus.run
+systemd-run $on_act --on-calendar="$wgp_on_cal" --unit=webgrabplus \
+            /usr/bin/nice -n "$wgp_nice" "$ADDON_DIR/bin/webgrabplus.run"
