@@ -3,5 +3,6 @@
    <category   label="30000">
       <setting label="30001" id="wgp_on_act" type="number" default="300"            />
       <setting label="30002" id="wgp_on_cal" type="text"   default="*-*-* 03:00:00" />
+      <setting label="30003" id="wgp_nice"   type="slider" default="10" range="0,1,19" option="int" />
    </category>
 </settings>
