@@ -1,4 +1,5 @@
 <settings>
+    <setting id="wgp_nice" value="10" />
     <setting id="wgp_on_act" value="300" />
     <setting id="wgp_on_cal" value="*-*-* 03:00:00" />
 </settings>
